# bt_ws

./: .gitignore  Dockerfile  README.md  agent.md  docker-compose.yaml  env.sh  todo.md
bt_app/: pyproject.toml
bt_app/bt_app/: __init__.py  app.py  context.py  context_old.py  main.py  msp_adapter.py  rc_utils.py  sm.py  telemetry.py  vehicle_config.py
bt_app/bt_app/behaviors/: __init__.py  flight_tree.py
bt_app/bt_app/common/: __init__.py  event.py  rc_protocol.py
bt_app/bt_app/control/: __init__.py  arm_controller.py  failsafe_controller.py  hover_yaw_controller.py  joy_zmq_adapter.py  pid.py  rc_mapper.py  takeoff_controller.py  visual_controller.py
bt_app/bt_app/datasets/: __init__.py  yolo_segmentation_frame.py
bt_app/bt_app/msgs/: __init__.py
bt_app/bt_app/msp/: __init__.py  bt_v2.py  command_dispatcher.py  my_dispatcher.py  protocol.py  transport.py
bt_app/bt_app/parameters/: __init__.py  event.py  models.py  parameters.py  service.py  storage.py  zmq_server.py
bt_app/bt_app/sensors/: gz_camera.py  gz_lidar.py  gz_rtf_monitor.py  harmonic_camera.py  jetty_camera.py  sim_senors.py
bt_app/bt_app/trackers/: optical_flow_tracker.py  red_box_tracker.py  red_box_tracker_ex.py  tracker_result_client.py
bt_app/bt_app/utils/: camera_view.py
bt_app/config/: parameter_storage_example.yaml  parameters.yaml
bt_app/docs/: application_state_machine.md
bt_app/example/: yolo_one_frame.py
bt_app/tests/: plotjuggler.py  plotjuggler1.py  test_bt_v2.py  test_serial_port.py  test_serial_port_bt_config.txt  test_ststus_ex.py  test_yolo_segmentation_frame.py
bt_cli/: pyproject.toml
bt_cli/bti_cli/: main.py
bt_cli/bti_cli/param/: command.py
bt_cli/bti_cli/transport/: __init__.py  zmq_transport.py
bt_cli/demos/: cli_demo1.py
bt_cli/tests/mock/: README.md  mock_param_server.py
bt_gazebo/plugins/: BetaflightPlugin.cc  BetaflightPlugin.hh  CMakeLists.txt
bt_gst/: AGENTS.md  README.md  pyproject.toml  synthetic_flow.avi
bt_gst/bt_gst/: __init__.py  cli.py  main.py  optical_flow_tracker.py  zmq_io.py  zmq_models.py
bt_gst/bt_gst/examples/: fps_app.py  fps_controller.py  generate_data.py  h264_sei.py  h264_sei_app_bridge_sender.py  h264_sei_recv.py  h264_sei_sender.py  json_receiver.py  json_sender.py  klv_sender.py  mpeg.md  receive_h264_klv_udp.py  record.py  rtp_ext_recv.py  rtp_ext_sender.py
bt_gst/docs/: optical_tracker_milestones.md  optical_tracker_requirement.md  track_request_event_flow.md
bt_gst/plugins/python/: gstbt_h264_sei.py  gstbt_optical_flow.py  gstbtpassthrough.py
bt_gst/plugins/rust/: xx.rs
bt_gst/scripts/: install-deps-ubuntu.sh
bt_gst/tests/: test_h264_sei.py  test_main.py  test_plugin_metadata.py  test_zmq_io.py  test_zmq_models.py
bt_joy/: CHANGELOG.md  README.md  pyproject.toml  todo
bt_joy/bt_joy/: __init__.py  protocol.py
bt_joy/bt_joy/client/: __init__.py  calibrate.py  config.py  joystick.py  main.py  mapper.py  runner.py  udp.py
bt_joy/bt_joy/examples/: __init__.py  default.yaml  default_mapping.yaml
bt_joy/bt_joy/server/: __init__.py  automation.py  cli.py  command_dispatcher.py  config.py  controller.py  joy_msp_server.py  joy_server.py  mock_server.py  msp.py  state.py  udp_server.py
bt_joy/debian/: bt-joy-client.service  bt-joy-server.service  changelog  control  copyright  install  manpages  postinst  prerm  rules
bt_joy/docs/man/: bt-joy-client.service.8  bt-joy-client.yaml.5  bt-joy-msp-server.1  bt-joy-server.yaml.5  (+3 more)
bt_joy/examples/: client.yaml  client1.yaml  mapping.yaml  server.yaml
bt_joy/scripts/: bt-joy-install-prompt
bt_joy/tests/: test_calibrate.py  test_client_main.py  test_command_dispatcher.py  test_config.py  test_controller.py  test_joystick.py  test_mapper.py  test_msp.py  test_msp_adapter.py  test_protocol.py  test_runner.py  test_server_main.py  test_server_state.py  test_udp_server.py
(+58 files in other folders)
