[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bti-cli"
version = "0.0.1"
description = "BTI command line interface"
requires-python = ">=3.10"
dependencies = [
    "pyzmq",
    "typer",
]

[project.scripts]
bti = "bti_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bti_cli*"]
